--- a/package.json
+++ b/package.json
@@ -33,9 +33,8 @@
     "@types/prettier": "^2.7.2",
     "@types/yargs": "^17.0.32",
     "rimraf": "^5.0.5",
-    "typescript": "5.1.6"
+    "typescript": "^5.1.6"
   },
-  "peerDependencies": {},
   "engines": {
     "node": ">=14.19.1 <=21.x.x",
     "npm": ">=6.0.0"
