--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "@strapi/typescript-utils": "^4.12.1",
     "@types/prettier": "^2.7.2",
     "@types/yargs": "^17.0.32",
-    "rimraf": "^5.0.5",
-    "typescript": "^5.1.6"
+    "rimraf": "^5.0.5"
   },
   "engines": {
     "node": ">=14.19.1 <=21.x.x",
